// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useFormula normal expression 1 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "marks": Array [
            Object {
              "attrs": Object {
                "attrs": undefined,
                "code": "FunctionName",
                "display": "num1",
                "errors": Array [],
                "hide": false,
                "renderText": [Function],
                "type": "string",
                "value": "num1",
              },
              "type": "FormulaType",
            },
          ],
          "text": "num1",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`useFormula spreadsheet expression 1 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "marks": Array [
            Object {
              "attrs": Object {
                "attrs": undefined,
                "code": "Equal",
                "display": "=",
                "errors": Array [],
                "hide": false,
                "renderText": undefined,
                "type": "any",
                "value": "=",
              },
              "type": "FormulaType",
            },
          ],
          "text": "=",
          "type": "text",
        },
        Object {
          "marks": Array [
            Object {
              "attrs": Object {
                "attrs": undefined,
                "code": "FunctionName",
                "display": "num1",
                "errors": Array [],
                "hide": false,
                "renderText": [Function],
                "type": "string",
                "value": "num1",
              },
              "type": "FormulaType",
            },
          ],
          "text": "num1",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;
